# node-rust-pty

./: .eslint.json  .gitignore  .npmignore  .prettierrc  Cargo.toml  README.md  napi-rs-config.json  napi.config.json  package-lock.json  package.json  postinstall.js  tsconfig.json
.github/: renovate.json
.github/workflows/: CI.yml
.history/: Cargo_20241012060901.toml  Cargo_20241012180559.toml  package_20241012071732.json  package_20241012095136.json  package_20241013071938.code-workspace
.history/__test__/: index.spec_20241011215000.mjs  index.spec_20241011234425.mjs  index.spec_20241011234831.mjs  index.spec_20241011234833.mjs  index.spec_20241011234836.mjs  index.spec_20241011234838.mjs  index.spec_20241011235940.mjs  index.spec_20241012001220.mjs  index.spec_20241012001226.mjs  index.spec_20241012022054.mjs  index.spec_20241012022225.mjs  index.spec_20241012022508.mjs  index.spec_20241012022545.mjs  index.spec_20241012022547.mjs  index.spec_20241012022555.mjs  index.spec_20241012022700.mjs  index.spec_20241012022702.mjs  index.spec_20241012023005.mjs  index.spec_20241012023008.mjs  index.spec_20241012023218.mjs  index.spec_20241012023309.mjs  index.spec_20241012023312.mjs  index.spec_20241012023327.mjs  index.spec_20241012023412.mjs  index.spec_20241012023504.mjs  index.spec_20241012023527.mjs  index.spec_20241012023529.mjs  index.spec_20241012023803.mjs  index.spec_20241012024040.mjs  index.spec_20241012024325.mjs  index.spec_20241012024832.mjs  index.spec_20241012030627.mjs  index.spec_20241012030629.mjs  index.spec_20241012034014.mjs  index.spec_20241012040043.mjs  index.spec_20241012040404.mjs  index.spec_20241012040421.mjs  index.spec_20241012055743.mjs  index.spec_20241012071108.mjs  index.spec_20241012071112.mjs  (+50 more)
.history/src/: lib_20241011233235.rs  lib_20241011235700.rs  lib_20241012000512.rs  lib_20241012001219.rs  lib_20241012002801.rs  lib_20241012003557.rs  lib_20241012003809.rs  lib_20241012004137.rs  lib_20241012004153.rs  lib_20241012005310.rs  lib_20241012010222.rs  lib_20241012010554.rs  lib_20241012011050.rs  lib_20241012011057.rs  lib_20241012011108.rs  lib_20241012012235.rs  lib_20241012013149.rs  lib_20241012013823.rs  lib_20241012013830.rs  lib_20241012014242.rs  lib_20241012014438.rs  lib_20241012014453.rs  lib_20241012014503.rs  lib_20241012015050.rs  lib_20241012015053.rs  lib_20241012015055.rs  lib_20241012015329.rs  lib_20241012015507.rs  lib_20241012015516.rs  lib_20241012015748.rs  lib_20241012015812.rs  lib_20241012020336.rs  lib_20241012020449.rs  lib_20241012020533.rs  lib_20241012020538.rs  lib_20241012020602.rs  lib_20241012020605.rs  lib_20241012020618.rs  lib_20241012020631.rs  lib_20241012021249.rs  (+141 more)
.trunk/: trunk.yaml
__test__/: index.spec.mjs  tsconfig.json
benches/: benchmark.js  benchmark.rs  package-lock.json  package.json  setup.js  test.js  tsconfig.json
benches/bench-benchmark/: benchmark.js  setup.js  test.js
benches/bench-swc/: index.cjs  index.ts
darwin-x64/: index.d.ts  index.darwin-x64.node  index.js  node-rust-pty.darwin-x64.node
docs/: ArchitectureAndFeatures.md  PotentialImprovements.md  TODO.md  TerminalEmulationRequiredChanges.md
npm/darwin-arm64/: README.md  package.json
npm/darwin-x64/: README.md  index.d.ts  node-rust-pty.darwin-x64.node  node-rust-x86_64-apple-darwin.node  package.json
npm/linux-x64-gnu/: README.md  package.json
npm/prebuild/: sanity.check
npm/win32-x64-msvc/: README.md  package.json
prebuild/darwin-x64/: index.js  node-rust-pty.darwin-x64.node
src/: lib.rs  lib2.rs.exlude
src/acceleration/: README.md
src/path/: mod.rs
src/platform/: linux.rs  macos.rs  mod.rs  unsupported.rs  windows.rs
src/pty/: command_handler.rs  commands.rs  emulator.rs  handle.rs  mod.rs  multiplexer.rs  (+3 more)
(+28 files in other folders)
