[package]
edition = "2021"
name = "node-rust-pty"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]




[dependencies]
# Default enable napi4 feature, see https://nodejs.org/api/n-api.html#node-api-version-matrix
napi = { version = "2.16.12", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "async"] }
napi-derive = { version = "2.16.12" }
tokio = { version = "1.4", features = ["full", "test-util"] }

# For PTY functionalities on macOS
objc = "0.2"
libc = "0.2.159"
log = "0.4.22"
env_logger = "0.11.5"
parking_lot = "0.12.3"
crossbeam-channel = "0.5.13"
bytes = "1.7.2"
nix = "0.29.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
dirs-next = "2.0.0"
base64 = "0.22.1"
vte = "0.13.0"
crossterm = "0.28.1"
serial_test = "3.1.1"
regex = "1.11.0"
dirs = "5.0.1"
futures = "0.3.31"
once_cell = "1.20.2"
ctrlc = "3.4.5"
bincode = "1.3.3"


[dev-dependencies]
serial_test = "3.1.1"
criterion = "0.5.1"

[build-dependencies]
napi-build = "2.0.1"

[profile.release]
lto = true
strip = "symbols"
