[package]
edition = "2021"
name = "node-rust-pty"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
# N-API for Node.js integration
napi = { version = "2.16.12", default-features = false, features = ["napi4", "tokio_rt", "serde-json", "async"] }
napi-derive = { version = "2.16.12" }

# Asynchronous runtime
tokio = { version = "1.4", features = ["full", "test-util"] }

# Low-level system interaction
libc = "0.2.159"
nix = { version = "0.29.0", features = ["poll"] }

# Logging
log = "0.4.22"
env_logger = "0.11.5"

# Synchronization primitives
parking_lot = "0.12.3"
crossbeam-channel = "0.5.13"

# Data handling
bytes = "1.7.2"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
serde_bytes = "0.11.15"
bincode = "1.3.3"
dashmap = "6.1.0"

# Directory and path handling
dirs-next = "2.0.0"
dirs = "5.0.1"

# Encoding and parsing
base64 = "0.22.1"
regex = "1.11.0"

# Terminal handling
vte = "0.13.0"
crossterm = "0.28.1"

# Concurrency and async utilities
futures = "0.3.31"
once_cell = "1.20.2"

# Signal handling
ctrlc = "3.4.5"

# Error handling
thiserror = "1.0.64"
async-trait = "0.1.83"
lock_api = "0.4.12"
napi-sys = "2.4.0"
serial_test = "3.1.1"



# Conditional Dependencies for macOS
[target.'cfg(target_os = "macos")'.dependencies]
objc = "0.2"

# Conditional Dependencies for Linux (if any specific)
[target.'cfg(target_os = "linux")'.dependencies]
# Add Linux-specific dependencies here if needed in the future

[target.x86_64-unknown-linux-musl]
rustflags = ["-C", "target-feature=-crt-static"]

# Development Dependencies
[dev-dependencies]
serial_test = "3.1.1"
criterion = "0.5.1"

# Build Dependencies
[build-dependencies]
napi-build = "2.0.1"

# Profile Settings
[profile.release]
lto = true
strip = "symbols"
